# -build_skel_cmake_check

./: CMakeLists.txt  README.md  README.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  test_todo.c
